[tool.poetry]
name = "cannon"
version = "0.0.72"
description = "An SSH automation tool based on Exscript"
authors = [
    "Mike Pennington <mike@pennington.net>",
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/mpenning/cannon"
documentation = "http://www.pennington.net/py/cannon/"
keywords = ["SSH", "Exscript"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = ">=3.6"
exscript = "2.6.3"
loguru = "0.5.3"
traits = "6.3.2"
textfsm = "1.1.2"
arrow = "1.2.1"


[tool.poetry.dev-dependencies]
black = ">=20.8b1"
fabric = "2.6.0"
pytest = "6.2.4"
Sphinx = "^4.3.0"
sphinx-bootstrap-theme = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel>=0.37.0",]
build-backend = "poetry.core.masonry.api"
